--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>CSV to HTML Table with Search</title>
+    <title></title>
     <link rel="stylesheet" href="style.css">
     <h1>歌枠へようこそ！</h1>
 </head>
 <body>
     <h2>レパートリー一覧</h2>
     
-    <label for="searchType">検索対象:</label>
+    <label for="searchType">検索対象</label>
     <select id="searchType">
         <option value="title">曲名</option>
         <option value="singer">歌手名</option>
