--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <header>
         <nav>
             <ul class="nav-menu">
-                <li><a href="/">TOP</a></li>
-                <li><a href="/omochi">おもちの歌リスト</a></li>
-                <li><a href="/ibuki">いぶちゃんの歌リスト</a></li>
+                <li><a href="https://sakura1206mochi.github.io/home/">TOP</a></li>
+                <li><a href="https://sakura1206mochi.github.io/home/omochi">おもちの歌リスト</a></li>
+                <li><a href="https://sakura1206mochi.github.io/home/ibuki">いぶちゃんの歌リスト</a></li>
                 <!-- <li>
                     <select id="searchType">
                         <option value="" selected disabled>歌リスト</option>
