--- a/ibuki/index.html
+++ b/ibuki/index.html
@@ -9,9 +9,9 @@
     <header>
         <nav>
             <ul class="nav-menu">
-                <li><a href="/">TOP</a></li>
-                <li><a href="/omochi">おもちの歌リスト</a></li>
-                <li><a href="/ibuki">いぶちゃんの歌リスト</a></li>
+                <li><a href="https://sakura1206mochi.github.io/home/">TOP</a></li>
+                <li><a href="https://sakura1206mochi.github.io/home/omochi">おもちの歌リスト</a></li>
+                <li><a href="https://sakura1206mochi.github.io/home/ibuki">いぶちゃんの歌リスト</a></li>
             </ul>
         </nav>
     </header>
